src/objects/Cut_Off_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Friday_Cut_Off__c</fullName>
        <label>Friday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Cut_Off__c</fullName>
        <label>Monday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHd_Cut_Off__c</fullName>
        <label>PHd Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phe_Cut_Off__c</fullName>
        <label>Phe Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Cut_Off__c</fullName>
        <label>Saturday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Cut_Off__c</fullName>
        <label>Sunday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Cut_Off__c</fullName>
        <label>Thursday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Cut_Off__c</fullName>
        <label>Tuesday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Cut_Off__c</fullName>
        <label>Wednesday Cut Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Cut Off Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cut Off Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cut Off Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Friday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Friday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Friday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Monday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Monday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PHd_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(PHd_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>PHd_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phe_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Phe_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Phe_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Saturday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Saturday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Saturday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sunday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Sunday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Sunday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Thursday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Thursday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Thursday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tuesday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Tuesday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Tuesday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wednesday_Cut_Off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Wednesday_Cut_Off__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&apos;))</errorConditionFormula>
        <errorDisplayField>Wednesday_Cut_Off__c</errorDisplayField>
        <errorMessage>Invalid format.</errorMessage>
    </validationRules>
</CustomObject>